...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chooseRoute">

    <Button
        android:id="@+id/noBuddii"
        android:layout_width="166dp"
        android:layout_height="88dp"
        android:layout_marginBottom="128dp"
        android:text="GO TO ROUTE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesBuddii"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/nabTxt"
        android:layout_width="275dp"
        android:layout_height="92dp"
...
