...
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="193dp"
        android:layout_height="183dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/Tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/findRoute"
        android:layout_width="233dp"
        android:layout_height="83dp"
        android:text="@string/find_route"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/beABuddii"
        app:layout_constraintEnd_toEndOf="parent"
...
