<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/find_buds_header"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/find_buddy_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#03A9F4"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="sans-serif-black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/findBudsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>