...
        android:text="Click Here to Register If You're New!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="467dp" />

    <Button
        android:id="@+id/Testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="140dp"
...
