...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity">

<Button
    android:id="@+id/abtUS"
    android:layout_width="250dp"
    android:layout_height="78dp"
    android:layout_marginTop="48dp"
    android:text="About Us"
    app:layout_constraintBottom_toTopOf="@+id/tutorial"
    app:layout_constraintEnd_toEndOf="parent"
...
