<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutUsActivity">

    <TextView
        android:id="@+id/AboutUsText"
        android:layout_width="399dp"
        android:layout_height="718dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Us"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="336dp"
        android:layout_height="93dp"
        android:text="Our Mission: We want to inspire the world to keep others safe. Our mission drives us to be the most innovative when it comes to keeping people safe from harm. We want to help create world where everyone has each others backs. "
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>